add unit to timeout

--- a/client/fileSettings.html
+++ b/client/fileSettings.html
@@ -256,7 +256,7 @@
     $(address(2, cursor)).append($('<b>').html('Command'));
     $(address(3, cursor)).append($('<b>').html('Invert'));
     $(address(4, cursor)).append($('<b>').html('Follow'));
-    $(address(5, cursor)).append($('<b>').html('Timeout'));
+    $(address(5, cursor)).append($('<b>').html('Timeout (ms)'));
     cursor -= 2;
     $(address(6, cursor - 1)).append($('<b>').html('Logfile').addClass('small'));
     $(address(7, cursor - 1)).append($('<b>').html('X = 0/1/A1/B5').addClass('small'));
