add padding to log modal table

--- a/client/client.html
+++ b/client/client.html
@@ -86,6 +86,11 @@
       width: 78vw;
     }
 
+    .modal table td {
+      padding: 5px;
+
+    }
+
     .header {
       background-color: yellow;
     }
