--- a/client/settings.html
+++ b/client/settings.html
@@ -30,7 +30,7 @@
       <tr>
         <td><input type="checkbox" id="serialcoms0reader"></td>
         <td><input type="checkbox" id="serialcoms1reader"></td>
-        <td>MBDC Reader & #</td>
+        <td>MBDC Reader (& #)</td>
       </tr>
       <tr>
         <td><input type="number" id="serialcoms0baudRate" min="0" step="1"></td>
