Remove shutdown button if not exposed

--- a/client/client.html
+++ b/client/client.html
@@ -371,7 +371,7 @@
     if (!constants.exposeUpload) {
       $('#uploadButton').remove();
     }
-    if (!constants.exposeUpload) {
+    if (!constants.exposeShutdown) {
       $('#shutDownButton').remove();
     }
     if (config.serial.testMode) {
