--- a/client/settings.html
+++ b/client/settings.html
@@ -30,7 +30,7 @@
       <tr>
         <td><input type="checkbox" id="serialcoms0reader"></td>
         <td><input type="checkbox" id="serialcoms1reader"></td>
-        <td>MBDC Reader (& #)</td>
+        <td>MBDC Reader</td>
       </tr>
       <tr>
         <td><input type="number" id="serialcoms0baudRate" min="0" step="1"></td>
@@ -205,8 +205,7 @@
 
     function setDate() {
       let dateTimeString = $('#date').val() + ' ' + $('#time').val()
-      let dateTime = Date.parse(dateTimeString);
-      socket.emit('setDateTime', dateTime / 1000);
+      socket.emit('setDateTime', dateTimeString);
     }
 
     function goDebug() {
