--- a/client/settings.html
+++ b/client/settings.html
@@ -205,6 +205,7 @@
 
     function setDate() {
       let dateTimeString = $('#date').val() + ' ' + $('#time').val()
+      console.log(dateTimeString)
       socket.emit('setDateTime', dateTimeString);
     }
 
