--- a/client/fileSettings.html
+++ b/client/fileSettings.html
@@ -128,7 +128,7 @@
       $(address(7, 6)).html('SL-Calibration').addClass('small');
 
 
-      $(address(0, 7)).append($('<select id ="selfLearningenabled">').html('<option value="off">Off</option><option value="com0">Com 0</option><option value="com1">Com 1</option>'));
+      $(address(0, 7)).append($('<select id ="selfLearningenabled">').html('<option value="off">Off</option><option value="com0">Com 0</option><option value="com1">Com 1</option><option value="com0ind">Com 0 Individual</option><option value="com1ind">Com 1 Individual</option>'));
       $(address(1, 7)).append($('<input type="number" id="selfLearningnumber" min="0" step="1">'));
       $(address(2, 7)).append($('<input type="number" id="selfLearningstartCalibration" min="0" step="1">'));
       $(address(3, 7)).append($('<input type="number" id="selfLearningtolerance" min="0" step="1">'));
